added support for Java 8